# Aruco-Detection-ROS2

./: README.md
armatronix/: package.xml  setup.cfg  setup.py  show.rviz
armatronix/armatronix/: simple_joint_publisher.py
armatronix/config/: diff_drive_controller.yaml  gz_bridge.yaml  joint_controller.yaml
armatronix/launch/: drive_test.launch.py  gazebo_display.launch.py  rviz_display.launch.py
armatronix/meshes/: angular_gripper.stl  angular_gripper_body.stl  angular_gripper_left_claw.stl
armatronix/urdf/: armatronix.urdf  armatronix_gazebo.urdf  test.urdf
armatronix/worlds/Untitled/: model.sdf
aruco_marker/: package.xml  setup.py
aruco_marker/aruco_marker/: aruco_detection.py
